2013-04-25 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* netax25.c:
	    Receive from AX.25 interface only if it has associated
	    an Aprx interface configuration object with it.
	    Less noise on logs that way.

2013-04-25 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* filter.c:
	    Commented out code, but make it conform with API
	    of historydb.

	* parse_aprs.c:
	    The call parameter 'historydb' can be NULL,
	    don't SEGV on it.

	* telemetry.c:
	    Pointer writing to beyond end of buffer (one last time)

	* ttyreader.c:
	    hexdumpfp() text dump fix

	* beacon.c:
	    Restructured the beacon data preparation for transmit.
	    Lots of mistakes had crept in recently (2.06?)

	* interface.c, netax25.c:
	    Debug printouts of processing errors, and transmissions.

2013-04-23 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* config.c:
	    Show 'myloc' lat/lon in degrees instead of radians.

	* digipeater.c:
	    debugging..

	* filter.c:
	    A fence-post error while parsing o/A8CDEF-12 -- accepted
	    only A8CDEF-1.

2013-04-22 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.8.in, aprx-complex.conf.in, aprx.conf.in,
	  doc/aprx-manual.odt, doc/aprx-manual.pdf:
	    Change documentation wording around <beacon>.

	* config.c:
	    Fix myloc config parameter parsing.

	* beacon.c:
	    Every <beacon> group is now independent from each other.
	    If you define multiple <beacon> groups, they will be
	    running in parallel with their own scheduling.
	    Meaning that you can have different cycles, and defaults
	    at each.

	* all source files:
	    Change Copyright claim years to  2007-2013.

	* configure.in:
	    Auto-test for <netinet/sctp.h> header file.

2013-04-22 Geoffrey F4FXL <max@planetemax.com>

	* digipeater.c:
	    Recent rewrite of viafield tracking code forgot
	    to initialize it in many cases -- and Covarity
	    tool did not notice that :-(

2013-04-20 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
